[package]
name = "mirror-copy"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.21"}
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.1.4" }
urlencoding = "2.1.3"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
reqwest = { version = "0.11.22", features = ["json"] }
futures = { version = "0.3"}
sha2 = "0.10.8"
hex = "0.4.3"
flate2 = "1.0.25"
tar = "0.4.38"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.74"
sha256 = "1.5.0"

[dev-dependencies]
serial_test = "2.0.0"
tokio-test = "0.4.3" 
mockito = "1.2.0"

[lib]
name = "mirror_copy"
path = "src/lib.rs"
